add branch in prompt

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	email = ppuubblliicc@protonmail.com
-	name = 1noro
+	email = arodriguezg@fpcoruna.afundacion.org
+	name = Alfredo
 #	email = arodriguezg@fpcoruna.afundacion.org
 #	name = Alfredo
 #	name = alfredo.rodriguez
