--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -12,5 +12,7 @@
     "editor.mouseWheelZoom": true,
     "[go]": {
         "editor.formatOnSave": false
-    }
+    },
+    "editor.suggestSelection": "first",
+    "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue"
 }
