--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -1,5 +1,5 @@
 {
-    "editor.fontFamily": "'Fira Mono', 'Droid Sans Mono', 'monospace', monospace, 'Droid Sans Fallback'",
+    "editor.fontFamily": "'Fira Code', 'Droid Sans Mono', 'monospace', monospace, 'Droid Sans Fallback'",
     "workbench.startupEditor": "newUntitledFile",
     "editor.renderWhitespace": "boundary",
     "editor.multiCursorModifier": "ctrlCmd",
@@ -45,5 +45,7 @@
     },
     "cSpell.enableFiletypes": [
         "dockerfile"
-    ]
+    ],
+    "editor.cursorStyle": "block",
+    "files.insertFinalNewline": true
 }
