--- a/.config/beets/config.yaml
+++ b/.config/beets/config.yaml
@@ -1,12 +1,12 @@
 directory: /nfs/Music/Beets
-library: /nfs/Music/beetslibrary.db
+library: /nfs/Music/beets.db
 art_filename: cover
 ui:
     color: yes
 import:
     move: no
     bell: yes
-    log: /nfs/Music/beetslog
+    log: /nfs/Music/beets.log
 paths:
     default: $albumartist/$album%aunique{}/$track - $title
     singleton: Non-Album/$artist/$title
