refactor(bash): :recycle: actualizando el .bashrc

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -51,8 +51,12 @@
     "github.copilot.enable": {
         "*": true,
         "yaml": true,
-        "plaintext": false,
+        "plaintext": true,
         "markdown": false,
-        "json": false
-    }
+        "json": true,
+        "latex": false
+    },
+    "redhat.telemetry.enabled": true,
+    "workbench.editor.untitled.hint": "hidden",
+    "workbench.colorTheme": "Gruvbox Dark Medium"
 }
