feat(nvim): mejorando la funcionalidad de Coc

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,17 +1,15 @@
 {
-    "languageserver": {
-        "bash": {
-            "command": "bash-language-server",
-            "args": ["start"],
-            "filetypes": ["sh"],
-            "ignoredRootPaths": ["~"]
-        }
+    "diagnostic-languageserver.filetypes": {
+        "vim": "vint",
+        "markdown": [ "write-good", "markdownlint" ],
+        "sh": "shellcheck",
+        "php": ["phpstan", "psalm"],
+        "yaml": [ "yamllint" ],
+        "cmake": [ "cmake-lint", "cmakelint" ],
+        "systemd": "systemd-analyze"
     },
-    "languageserver": {
-        "dockerfile": {
-            "command": "docker-langserver",
-            "filetypes": ["dockerfile"],
-            "args": ["--stdio"]
-        }
+    "diagnostic-languageserver.formatFiletypes": {
+        "sh": "shfmt",
+        "cmake": "cmake-format"
     }
 }
